<resources>
    <string name="app_name">WeStudy</string>

    <string name="main_title">WeStudy</string>
    <string name="main_button">login</string>
    <string name="main_email_hint">Email</string>
    <string name="main_password_hint">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">ActivityHome</string>
    <string name="main_register">Register</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_explore">ExploreActivity</string>
    <string name="main_username_hint">UserName</string>
    <string name="add_post">Add Post</string>
    <string name="post_hint">Post Content...</string>
    <string name="qestion_content">Qestion Content</string>
    <string name="question_hint">Qestion Description...</string>


</resources>